Akeeba Subscriptions 5.2.1
================================================================================
- Removed translations
+ akeeba/internal#6 Added "Missing Invoice" report
+ gh-276 Added method getFieldValue() to UserInfo\Html
~ Added local debugging option for the PayPal plugin
~ Updated VAT rates
# gh-275 VAT rate does not show on subscribe page
# Recurring subscriptions would result in a PHP exception
# Wrong VAT calculation in recurring subscriptions
# No invoice generated when a subscription is upgraded using a subscription relation rule

Akeeba Subscriptions 5.2.0
================================================================================
! NO SUPPORT – INTERNAL PROJECT ONLY
! Invoices could be downloaded by anyone who knows the invoice ID without being logged in
- Removed options: use email as username (no longer allowed)
- Removed options: show business fields, show regular fields, show discount field, show coupon field, show state (all fields are shown, use template overrides to hide them)
- Removed options: show/hide countries from the subscription page (all countries are displayed)
- Removed options: allow login (not logged in users always see the login area, use view template overrides to hide that)
- Removed JS comments working around third party Javascript bugs. If you get a JS bug in the front-end FIX YOUR SITE.
- Removed admin module showing latest subscriptions
- Removed AcyMailing integration plugin
- Removed Akeeba Ticket System 1.x credits integration plugin
- Removed automatic country and city fill plugin
- Removed Google Analytics for Commerce integration plugin
- Removed custom fields feature
- Removed intellectual property integration plugin
- Removed Joomla user profile integration plugin
- Removed Kunena integration plugin
- Removed reCaptcha integration plugin
- Removed Slave Subscriptions feature
- Removed custom SQL plugin
- Removed debug subscriptions email plugin
- Removed obsolete languages