@@ -99,25 +99,6 @@
       page</link>. Throughout this chapter we assume that you are familiar
       with these instructions and we will try not to duplicate them.</para>
 
-      <note>
-        <para>The language (translation) files are NOT installed
-        automatically. You can download and install them from our <link
-        xlink:href="http://cdn.akeebabackup.com/language/akeebasubs/index.html">language
-        download page</link>. Do note that you will have to install both the
-        component and the language packages for the component to work.</para>
-
-        <para>As noted on that page, Akeeba Ltd only produces the English and
-        Greek language files. All other languages are contributed by third
-        parties. If you spot an error please do not contact Akeeba Ltd; we
-        will be unable to help you. Instead, please go to the <link
-        xlink:href="https://www.transifex.com/projects/p/akeebasubs/">translation
-        project page</link> to find the contact information of the translator.
-        Abandoned languages will show the maintainer being our staff member
-        "nikosdion". In this case you're out of luck; if you want to fix the
-        language package you will need to volunteer to take over the
-        translation project for that language.</para>
-      </note>
-
       <section>
         <title>Installing or manually updating the component and language
         files</title>
