@@ -1,0 +1,37 @@
+<!-- Akeeba LoginGuard update provisioning XML stream -->
+<updates>
+    <!-- Version 5.2.1 -->
+    <update>
+        <version>5.2.1</version>
+        <tags>
+            <tag>stable</tag>
+        </tags>
+
+        <downloads>
+            <downloadurl type="full" format="zip">https://github.com/akeeba/loginguard/releases/download/5.2.1/pkg_akeebasubs-5.2.1.zip</downloadurl>
+        </downloads>
+        <infourl title="Akeeba LoginGuard Release Notes">https://github.com/akeeba/loginguard/releases/5.2.1</infourl>
+
+        <targetplatform name="joomla" version="3.4"/>
+        <targetplatform name="joomla" version="3.5"/>
+        <targetplatform name="joomla" version="3.6"/>
+        <targetplatform name="joomla" version="3.7"/>
+
+        <php_minimum>5.4.0</php_minimum>
+
+        <ars-phpcompat version="5.4"/>
+        <ars-phpcompat version="5.5"/>
+        <ars-phpcompat version="5.6"/>
+        <ars-phpcompat version="7.0"/>
+        <ars-phpcompat version="7.1"/>
+
+        <name>Akeeba Subscriptions package</name>
+        <description>Akeeba Subscriptions - The easiest way to sell subscriptions on your Joomla! site</description>
+        <element>pkg_akeebasubs</element>
+        <type>package</type>
+        <maintainer>Akeeba Ltd</maintainer>
+        <maintainerurl>https://www.akeebabackup.com</maintainerurl>
+        <section>Updates</section>
+        <client>0</client>
+    </update>
+</updates>
